<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoPro Remote</string>
    <string name="wifi_settings">Wi-Fi Settings</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="mode">Mode</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="burst">Photo Burst</string>
    <string name="timelapse">Time-Lapse</string>

    <string-array name="modes">
        <item>@string/video</item>
        <item>@string/photo</item>
        <item>@string/burst</item>
        <item>@string/timelapse</item>
    </string-array>

    <string name="hello_gopro_wear_remote">Hello GoPro Wear Remote!</string>
    <string name="action_settings">Settings</string>
    <string name="show_notificaion">Show GoPro Remote notificaion</string>
    <string name="gopro_action_take_photo">take photo</string>
    <string name="gopro_action_mode_photo">switch to photo</string>
    <string name="gopro_action_mode_video">switch to video</string>
    <string name="gopro_action_on">On</string>
    <string name="gopro_action_off">Off</string>
    <string name="gopro_action_start_video">start video</string>
    <string name="gopro_action_stop_video">stop video</string>
    <string name="notification_back">back</string>
    <string name="notification_title_photo">Photo mode</string>
    <string name="notification_content_photo">Take a picture</string>
    <string name="notification_title_gopro_wear_remote">GoPro Remote</string>
    <string name="notification_content_gopro_wear">Take photos or videos with your wrist. Choose a mode</string>
    <string name="notification_title_more">More...</string>
    <string name="notification_content_more">Additional Actions</string>
    <string name="notification_title_gopro_device">GoPro Remote is running</string>
    <string name="notification_content_gopro_device">use your android wear device to control your GoPro</string>
    <string name="notification_title_video">Video mode</string>
    <string name="notification_title_content_video">Take a video</string>
    <string name="choose_mode">choose mode</string>

</resources>
