<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp">

        <android.support.v7.widget.Toolbar
            style="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:paddingRight="@dimen/standard_padding"
            android:background="?attr/colorPrimary"
            app:titleTextAppearance="@style/ToolbarTitleTextAppearance">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/notificationSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:gravity="center"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginRight="@dimen/standard_padding"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_padding"
            android:text="@string/wifi_settings"
            android:textColor="@color/header_title_text"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_padding"
                android:text="@string/ssid" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_padding"
                android:inputType="textPassword"
                android:text="@string/password" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/mode"
            android:textColor="@color/header_title_text"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin"
            android:checkedButton="@+id/mode_video">

            <RadioButton
                android:id="@+id/mode_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video"/>

            <RadioButton
                android:id="@+id/mode_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo"/>

            <RadioButton
                android:id="@+id/mode_burst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/burst"/>

            <RadioButton
                android:id="@+id/mode_timelapse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timelapse"/>

        </RadioGroup>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:src="@drawable/ic_videocam_white_24dp"
        app:fabSize="normal" />

</android.support.design.widget.CoordinatorLayout>
