<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <android.support.v7.widget.Toolbar
        style="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:paddingRight="@dimen/standard_padding"
        android:background="?attr/colorPrimary"
        app:titleTextAppearance="@style/ToolbarTitleTextAppearance">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/notificationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:gravity="center"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginRight="@dimen/standard_padding"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_padding"
            android:text="@string/wifi_settings"
            android:textColor="@color/header_title_text"
            android:textStyle="bold" />

        <com.marvinlabs.widget.floatinglabel.edittext.FloatingLabelEditText
            android:id="@+id/ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_padding"
            app:flw_labelText="@string/ssid" />

        <com.marvinlabs.widget.floatinglabel.edittext.FloatingLabelEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_padding"
            android:inputType="textPassword"
            app:flw_labelText="@string/password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/mode"
            android:textColor="@color/header_title_text"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mode_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_title_photo"
                android:enabled="false"/>

            <Button
                android:id="@+id/mode_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/field_margin"
                android:text="@string/notification_title_video"
                android:enabled="false"/>

        </LinearLayout>

    </LinearLayout>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_videocam_white_24dp"
        app:fab_colorNormal="@color/fab_normal"
        app:fab_colorPressed="@color/fab_pressed"
        app:fab_colorRipple="@color/fab_ripple"/>

</FrameLayout>
